# HPK-2019

./: .gitignore  HPK.g4  pom.xml
.github/workflows/: maven.yml
src/main/antlr4/de/hpk/: HPK.g4
src/main/c/de/hpk/: .gitignore  CMakeLists.txt  CUnit.h  Differentiator.cpp  Differentiator.h  Function.h  Integrator.cpp  Integrator.h  JavaFunction.cpp  JavaFunction.h  NoConvergenceException.cpp  NoConvergenceException.h  Tests.cpp  de_hpk_Differentiator.cpp  de_hpk_Integrator.cpp  differentiator.cpp  function.hpp  integrator.cpp  integrator.h
src/main/c/de/hpk/include/: de_hpk_Differentiator.h  de_hpk_Integrator.h
src/main/java/de/hpk/: Differentiator.java  FunctionRepository.java  FunctionRepositoryImpl.java  FunctionUtils.java  Integrator.java  Main.java  MathFunction.java  MathVisitor.java  VariableRepository.java  VariableRepositoryImpl.java  Variables.java
src/main/java/de/hpk/matrix/: IMatrixAlgorithm.java  Matrix.java  MatrixAlgorithm2.java  MatrixAlgorithm3.java  MatrixAlgorithm4.java  MatrixWorker.java  MatrixWorker2.java  MatrixWorker4.java  Vector.java
src/main/java/de/lab4inf/wrb/: WRBScript.java
src/test/java/de/hpk/: AbstractScriptTest.java  DifferentiatorTest.java  FunctionRepositoryTest.java  HPKLexerTest.java  HPKParserTest.java  IntegratorTest.java  MathTest.java  MathTests.java  MathVisitorTest.java  MatrixTest.java  Prak4Test.java  Prak4Tester.java  SimpleWRBScriptTest.java  VariableRepositoryTest.java
