cmake_minimum_required(VERSION 3.0)
project (native)
find_package(Java REQUIRED)
find_package(JNI REQUIRED)
include(UseJava)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${JAVA_HOME}/include")
set(CMAKE_JAVA_COMPILE_FLAGS "-source" "1.8" "-target" "1.8")
include_directories(${JNI_INCLUDE_DIRS})
add_executable(native differentiator.cpp function.hpp NoConvergenceException.cpp NoConvergenceException.h integrator.cpp integrator.h)
target_link_libraries(native ${JNI_LIBRARIES})